Changelog for GEMC
==================

6/9/16
 - fixed log for vertex units for LUND format

6/8/16
 - fixed mismatch between ftm hitprocess and actual geometry


6/3/16
 - if the particle is a geantino the edep will be its momentum (ftof only for now)

5/23/16
 - better comments for electronic noise routines
 - added option ELECTRONICNOISE to select sensitive detectors that will produce eletronic noise.
   The electronic noise is disabled by default

5/19/16
 - speeding up sensitive detector by not looking up vector<identifier>
 - added pure virtual function vector<MHit*> electronicNoise() to return a vector
   of hits coming from electronic noise.
   Each hit process routine must implement this function to provide electronic noise.
   The user can loop over all possible detector elements::

    vector<MHit*> noiseHits;

    // first, identify the cells that would have electronic noise
    // then instantiate hit with energy E, time T, identifier IDF:
    //
    // MHit* thisNoiseHit = new MHit(E, T, IDF, pid);

    // push to noiseHits collection:
    // noiseHits.push_back(thisNoiseHit)

    return noiseHits;

 - The electronic noise hits are then added to the normal geant4 hits. Each process routine
   will have them available in the output.

5/17/16
 - added positronNuclear to processs catalogue

5/16/16
 - defaults to hit definitions if file is not found
 - added kaon0LInelastic process catalogue - re-ordered to put kaons together
 - option REMOVESENSITIVITY to remove a volume sensitivity::

    Usage: -REMOVESENSITIVITY="volumename1, volumename2, ..."

5/13/16
 - added low em physics process (code LEM)
 - added em Livermore with polarisation physics process (code LVP)
 - added option "CHANGEVOLUMEMATERIALTO" to change a volume material::

    Usage: -CHANGEVOLUMEMATERIALTO="volume, new material"

 - added option "SWITCH_MATERIALTO" to change a material into another::

     Usage: -SWITCH_MATERIALTO="oldmaterial, newmaterial"
