@@ -1,11 +1,3 @@
-// GEMC PHYSICS LIST
-//
-// -----------------
-//
-// The
-
-
-
 // c++ headers
 #include <iostream>
 using namespace std;
@@ -22,7 +14,7 @@ using namespace std;
 #include "G4Electron.hh"
 #include "G4Positron.hh"
 #include "G4Proton.hh"
-#include "G4DecayTable.hh"                                                     
+#include "G4DecayTable.hh"
 #include "G4ProcessTable.hh"
 
 // geant4 physics headers
@@ -55,13 +47,13 @@ PhysicsList::PhysicsList(goptions opts) : G4VModularPhysicsList()
 	gemcOpt = opts;
 	verbosity       = gemcOpt.optMap["PHYS_VERBOSITY"].arg ;
 	ingredientsList = gemcOpt.optMap["PHYSICS"].args ;
-	
+
 	// default physics lists
 	hadronicPhys = "none";
 	EMPhys       = "none";
 	opticalPhys  = "none";
 	HPPhys       = "none";
-	
+
 	// loading hadronic and em physics lists
 	G4PhysListFactory factory;
 	g4HadronicList = factory.AvailablePhysLists();
@@ -72,60 +64,55 @@ PhysicsList::PhysicsList(goptions opts) : G4VModularPhysicsList()
 	{
 		vector<string> emstripped = get_strings(allEM[i], "_");
 		string stripped;
-		
+
 		if(emstripped.size() == 2) stripped = TrimSpaces(emstripped[1]);
 		if(stripped != "")
 			g4EMList.push_back(stripped);
-		
+
 	}
-	
+
 	G4LossTableManager::Instance();
 	defaultCutValue = gemcOpt.optMap["PRODUCTIONCUT"].arg;
 	cutForGamma     = defaultCutValue;
 	cutForElectron  = defaultCutValue;
 	cutForPositron  = defaultCutValue;
 	cutForProton    = defaultCutValue;
-	
+
 	physIngredients = get_strings(ingredientsList, "+");
-	
+
 	g4EMPhysics    = NULL;
 	g4ParticleList = NULL;
 	g4HadronicPhysics.clear();
-	
+
 	// validateIngredients will also set hadronicPhys, EMPhys, opticalPhys
 	if(!validateIngredients())
 	{
 		cout << "  !!! Error: physics ingredients list not valid: >" << ingredientsList << "<" << endl;
 		list();
-		
+
 		cout << " Exiting." << endl;
 		exit(0);
 	}
 	else
 		cookPhysics();
-
 }
 
 
 
-
-PhysicsList::~PhysicsList()
-{
-	;
-}
+PhysicsList::~PhysicsList() { ; }
 
 
 void PhysicsList::list()
-{	
+{
 	cout << "     > Available hadronic physics list: " << endl;
 	for(unsigned i=0; i<g4HadronicList.size(); i++)
 		cout << "       - " << g4HadronicList[i] << endl;
 	cout << endl;
-	
+
 	cout << "     > Available EM physics list: " << endl;
 	for(unsigned i=0; i<g4EMList.size(); i++)
 		cout << "       - " << g4EMList[i] << endl;
-	
+
 	cout << "   > Optica: optical" << endl;
 }
 
@@ -138,12 +125,12 @@ bool PhysicsList::validateIngredients()
 	unsigned isEMLegit       = 0;
 	unsigned isOpticalLegit  = 0;
 	unsigned isHPLegit       = 0;
-	
+
 	G4PhysListFactory factory;
 	for(unsigned i=0; i<physIngredients.size(); i++)
 	{
 		string ingredient = TrimSpaces(physIngredients[i]);
-		
+
 		if(factory.IsReferencePhysList(ingredient))
 		{
 			isHadronicLegit = 1;
@@ -156,7 +143,7 @@ bool PhysicsList::validateIngredients()
 				isEMLegit = 1;
 				EMPhys = ingredient;
 			}
-		
+
 		if(ingredient == "Optical")
 		{
 			isOpticalLegit = 1;
@@ -168,7 +155,7 @@ bool PhysicsList::validateIngredients()
 			isHPLegit = 1;
 		}
 	}
-	
+
 	if(verbosity > 0)
 	{
 		cout << "  >> Physics: " << ingredientsList << endl;
@@ -177,32 +164,30 @@ bool PhysicsList::validateIngredients()
 		cout << "   > HP: " << HPPhys  << endl;
 		cout << "   > Optical: " << opticalPhys << endl << endl;
 	}
-	
+
 	if(physIngredients.size() == (isHadronicLegit + isEMLegit + isOpticalLegit + isHPLegit))
 		return TRUE;
-	
+
 	return FALSE;
 }
 
 
-
-
 void PhysicsList::SetCuts()
 {
-	
+
 	if (verbosity >0)
 	{
 		cout << "PhysicsList::SetCuts:";
 		cout << "CutLength : " << G4BestUnit(defaultCutValue, "Length") << endl;
 	}
-	
+
 	// set cut values for gamma at first and for e- second and next for e+,
 	// because some processes for e+/e- need cut values for gamma
 	SetCutValue(cutForGamma, "gamma");
 	SetCutValue(cutForElectron, "e-");
 	SetCutValue(cutForPositron, "e+");
 	SetCutValue(cutForProton, "proton");
-	
+
 	if (verbosity>0) DumpCutValuesTable();
 }
 
@@ -233,8 +218,10 @@ void PhysicsList::SetCutForProton(double cut)
 
 
 #include "FTFP_BERT.hh"
-#include "FTFP_BERT_TRV.hh"
 #include "FTFP_BERT_HP.hh"
+#include "FTFP_BERT_TRV.hh"
+#include "FTFP_INCLXX.hh"
+#include "FTFP_INCLXX_HP.hh"
 #include "FTF_BIC.hh"
 #include "LBE.hh"
 #include "QBBC.hh"
@@ -242,10 +229,14 @@ void PhysicsList::SetCutForProton(double cut)
 #include "QGSP_BERT_HP.hh"
 #include "QGSP_BIC.hh"
 #include "QGSP_BIC_HP.hh"
+#include "QGSP_BIC_AllHP.hh"
 #include "QGSP_FTFP_BERT.hh"
 #include "QGS_BIC.hh"
 #include "QGSP_INCLXX.hh"
+#include "QGSP_INCLXX_HP.hh"
 #include "Shielding.hh"
+#include "NuBeam.hh"
+
 #include "G4OpticalPhysics.hh"
 
 #include "G4StepLimiter.hh"
@@ -254,10 +245,10 @@ void PhysicsList::cookPhysics()
 {
 	// Particles
 	g4ParticleList = new G4DecayPhysics("decays");
-	
+
 	// EM Physics
 	if(g4EMPhysics) delete  g4EMPhysics;
-	     if(EMPhys == "STD")  g4EMPhysics = new G4EmStandardPhysics();
+	if(EMPhys == "STD")  g4EMPhysics = new G4EmStandardPhysics();
 	else if(EMPhys == "EMV")  g4EMPhysics = new G4EmStandardPhysics_option1();
 	else if(EMPhys == "EMX")  g4EMPhysics = new G4EmStandardPhysics_option2();
 	else if(EMPhys == "EMY")  g4EMPhysics = new G4EmStandardPhysics_option3();
@@ -271,18 +262,18 @@ void PhysicsList::cookPhysics()
 		cout << " !! Wrong EMPhys " << EMPhys << endl << "Exiting." << endl;
 		exit(0);
 	}
-	  
+
 	// Hadronic Physics
-	// always adding these
-	// this is a general version of
+	// The lists in FTFP_BERT() functions also include the EM, hadron elastic and so on. Here we separate them.
+	// See for example FTFP_BERT.icc
+	// This is a general version of
 	// Hadr01 example
-	// LBE and QBBC were removed
-	
+
 	// em extra physics always there
 	if(hadronicPhys != "none")
 	{
 		g4HadronicPhysics.push_back( new G4EmExtraPhysics(verbosity));
-		
+
 		if(HPPhys == "yes")
 		{
 			cout << "   >  Loading High Precision Cross Sections... this may take a while..." << endl;
@@ -290,36 +281,37 @@ void PhysicsList::cookPhysics()
 		}
 		else
 			g4HadronicPhysics.push_back( new G4HadronElasticPhysics(verbosity) );
-		
+
 		// binary cascade, bertini models, or standard
 		// ion physics
 		if(hadronicPhys.find("BIC") != string::npos)
 			g4HadronicPhysics.push_back( new G4IonBinaryCascadePhysics(verbosity));
 		else if(hadronicPhys.find("BERT") != string::npos)
 			g4HadronicPhysics.push_back( new G4IonPhysics(verbosity));
-		
-		
+
+
 		g4HadronicPhysics.push_back( new G4NeutronTrackingCut(verbosity));
 	}
+
 	// adding the hadronic physics list
- 	// I don't understand why there isn't a factory method for this
-	// had to hardcode the cases
-	// in any case they are in G4PhysListFactory
-	
+	// the complete list is in G4PhysListFactory.cc
+	// FTF
 	     if(hadronicPhys == "FTFP_BERT")      {g4HadronicPhysics.push_back( new G4HadronPhysicsFTFP_BERT());}
-	else if(hadronicPhys == "FTFP_BERT_TRV")  {g4HadronicPhysics.push_back( new G4HadronPhysicsFTFP_BERT_TRV());}
 	else if(hadronicPhys == "FTFP_BERT_HP")   {g4HadronicPhysics.push_back( new G4HadronPhysicsFTFP_BERT_HP());}
+	else if(hadronicPhys == "FTFP_BERT_TRV")  {g4HadronicPhysics.push_back( new G4HadronPhysicsFTFP_BERT_TRV());}
 	else if(hadronicPhys == "FTF_BIC")        {g4HadronicPhysics.push_back( new G4HadronPhysicsFTF_BIC());}
+	// QGSP
 	else if(hadronicPhys == "QGSP_BERT")      {g4HadronicPhysics.push_back( new G4HadronPhysicsQGSP_BERT());}
 	else if(hadronicPhys == "QGSP_BERT_HP")   {g4HadronicPhysics.push_back( new G4HadronPhysicsQGSP_BERT_HP());}
 	else if(hadronicPhys == "QGSP_BIC")       {g4HadronicPhysics.push_back( new G4HadronPhysicsQGSP_BIC());}
 	else if(hadronicPhys == "QGSP_BIC_HP")    {g4HadronicPhysics.push_back( new G4HadronPhysicsQGSP_BIC_HP());}
 	else if(hadronicPhys == "QGSP_FTFP_BERT") {g4HadronicPhysics.push_back( new G4HadronPhysicsQGSP_FTFP_BERT());}
-	else if(hadronicPhys == "QGS_BIC")        {g4HadronicPhysics.push_back( new G4HadronPhysicsQGS_BIC());}
+	// Shielding
+	else if(hadronicPhys == "Shielding")      {g4HadronicPhysics.push_back( new G4HadronPhysicsShielding());}
+	// Others
 	else if(hadronicPhys == "none")            {;}
-	//else if(hadronicPhys == "Shielding")      {g4HadronicPhysics.push_back( new Shielding());}
 	else {cout << "Wrong hadronicPhys " << hadronicPhys << endl << "Exiting." << endl; exit(0);}
-	
+
 	// optical physics
 	// taken from example: optical/LXe
 	if(opticalPhys == "yes")
@@ -328,27 +320,27 @@ void PhysicsList::cookPhysics()
 		// see G4OpticalPhysics.hh
 		G4OpticalPhysics* opticalPhysics = new G4OpticalPhysics();
 		opticalPhysics->SetWLSTimeProfile("delta");
-		
+
 		g4HadronicPhysics.push_back(opticalPhysics);
 	}
-	
+
 }
 
 
 void PhysicsList::ConstructParticle()
 {
-        muonRadDecay = 0;
-        muonRadDecay = gemcOpt.optMap["FORCE_MUON_RADIATIVE_DECAY"].arg;
+	muonRadDecay = 0;
+	muonRadDecay = gemcOpt.optMap["FORCE_MUON_RADIATIVE_DECAY"].arg;
 
 	g4ParticleList->ConstructParticle();
-	
+
 	if(muonRadDecay){
-	  G4DecayTable* MuonPlusDecayTable = new G4DecayTable();
-	  G4DecayTable* MuonMinusDecayTable = new G4DecayTable();
-	  MuonPlusDecayTable -> Insert(new G4MuonRadiativeDecayChannelWithSpin("mu+",1.00));
-	  MuonMinusDecayTable -> Insert(new G4MuonRadiativeDecayChannelWithSpin("mu-",1.00));
-	  G4MuonPlus::MuonPlusDefinition()->SetDecayTable(MuonPlusDecayTable);
-	  G4MuonMinus::MuonMinusDefinition()->SetDecayTable(MuonMinusDecayTable);
+		G4DecayTable* MuonPlusDecayTable = new G4DecayTable();
+		G4DecayTable* MuonMinusDecayTable = new G4DecayTable();
+		MuonPlusDecayTable -> Insert(new G4MuonRadiativeDecayChannelWithSpin("mu+",1.00));
+		MuonMinusDecayTable -> Insert(new G4MuonRadiativeDecayChannelWithSpin("mu-",1.00));
+		G4MuonPlus::MuonPlusDefinition()->SetDecayTable(MuonPlusDecayTable);
+		G4MuonMinus::MuonMinusDefinition()->SetDecayTable(MuonMinusDecayTable);
 	}
 }
 
@@ -361,9 +353,9 @@ void PhysicsList::ConstructProcess()
 
 	if(g4EMPhysics)
 		g4EMPhysics->ConstructProcess();
-	
+
 	g4ParticleList->ConstructProcess();
-	
+
 	for(size_t i=0; i<g4HadronicPhysics.size(); i++)
 		g4HadronicPhysics[i]->ConstructProcess();
 
@@ -376,27 +368,27 @@ void PhysicsList::ConstructProcess()
 		G4ParticleDefinition* particle = theParticleIterator->value();
 		G4ProcessManager*     pmanager = particle->GetProcessManager();
 		string                pname    = particle->GetParticleName();
-	
+
 		// Adding Step Limiter
 		if ((!particle->IsShortLived()) && (particle->GetPDGCharge() != 0.0) && (pname != "chargedgeantino"))
 		{
 			if(verbosity > 2)
 				cout << "   >  Adding Step Limiter for " << pname << endl;
-			
+
 			pmanager->AddProcess(new G4StepLimiter,       -1,-1,3);
 		}
 
 		if(muonRadDecay){
-		  theDecayProcess = new G4DecayWithSpin();
-		  decay = processTable->FindProcess("Decay",particle);      
-		  if (theDecayProcess->IsApplicable(*particle)) {
-		    if(decay) pmanager->RemoveProcess(decay);
-		    pmanager->AddProcess(theDecayProcess);
-		    pmanager->SetProcessOrdering(theDecayProcess, idxPostStep);
-		    pmanager->SetProcessOrderingToLast(theDecayProcess, idxAtRest);
-		  }
+			theDecayProcess = new G4DecayWithSpin();
+			decay = processTable->FindProcess("Decay",particle);
+			if (theDecayProcess->IsApplicable(*particle)) {
+				if(decay) pmanager->RemoveProcess(decay);
+				pmanager->AddProcess(theDecayProcess);
+				pmanager->SetProcessOrdering(theDecayProcess, idxPostStep);
+				pmanager->SetProcessOrderingToLast(theDecayProcess, idxAtRest);
+			}
 		}
-		  
+
 	}
 }
 
