@@ -542,33 +542,32 @@ void goptions::setGoptions()
 
 	// Physics
 	optMap["PHYSICS"].args = "STD + FTFP_BERT";
-	optMap["PHYSICS"].help =  "    Physics List. The lists are modular and can be added together. \n";
-	optMap["PHYSICS"].help +=  "     For example, a choice could be 'QGSC_BERT + STD + HP + Optical'\n";
-	optMap["PHYSICS"].help +=  "     Possible Choices:\n";
+	optMap["PHYSICS"].help =  "  Physics List. The list is modular. \n\n";
+	optMap["PHYSICS"].help +=  "     For example, 'STD' would only activate the standard electromagnetic processes, while\n";
+	optMap["PHYSICS"].help +=  "     'QGSC_BERT + STD + HP + Optical' would also activate high precision hadronic and optical physics.\n\n";
+	optMap["PHYSICS"].help +=  "     For a complete list, see http://geant4.cern.ch/support/physicsLists/referencePL/referencePL.shtml'\n\n";
+	optMap["PHYSICS"].help +=  "     Available modules:\n\n";
 	optMap["PHYSICS"].help +=  "      Hadronic: \n";
-	optMap["PHYSICS"].help +=  "      - CHIPS\n";
+	optMap["PHYSICS"].help +=  "      The FTF model is based on the FRITIOF description of string excitation and fragmentation.\n";
 	optMap["PHYSICS"].help +=  "      - FTFP_BERT\n";
+	optMap["PHYSICS"].help +=  "      - FTFP_BERT_HP\n";
 	optMap["PHYSICS"].help +=  "      - FTFP_BERT_TRV\n";
-	optMap["PHYSICS"].help +=  "      - FTF_BIC\n";
-	optMap["PHYSICS"].help +=  "      - LHEP\n";
+	optMap["PHYSICS"].help +=  "      - FTF_BIC\n\n";
+	optMap["PHYSICS"].help +=  "      QGSP is the basic physics list applying the quark gluon string model for high ";
+	optMap["PHYSICS"].help +=  " energy interactions of protons, neutrons, pions, and Kaons and nuclei.\n";
 	optMap["PHYSICS"].help +=  "      - QGSC_BERT\n";
-	optMap["PHYSICS"].help +=  "      - QGSP\n";
-	optMap["PHYSICS"].help +=  "      - QGSP_BERT\n";
-	optMap["PHYSICS"].help +=  "      - QGSP_BERT_CHIPS\n";
 	optMap["PHYSICS"].help +=  "      - QGSP_BERT_HP\n";
 	optMap["PHYSICS"].help +=  "      - QGSP_BIC\n";
 	optMap["PHYSICS"].help +=  "      - QGSP_BIC_HP\n";
-	optMap["PHYSICS"].help +=  "      - QGSP_FTFP_BERT\n";
-	optMap["PHYSICS"].help +=  "      - QGS_BIC\n";
-	optMap["PHYSICS"].help +=  "      - QGSP_INCLXX\n";
+	optMap["PHYSICS"].help +=  "      - QGSP_FTFP_BERT\n\n";
 	optMap["PHYSICS"].help +=  "      Electromagnetic: \n";
 	optMap["PHYSICS"].help +=  "      - STD\n";
-	optMap["PHYSICS"].help +=  "      - EMV\n";
-	optMap["PHYSICS"].help +=  "      - EMX\n";
-	optMap["PHYSICS"].help +=  "      - EMY\n";
-	optMap["PHYSICS"].help +=  "      - EMZ\n";
-	optMap["PHYSICS"].help +=  "      - LIV\n";
-	optMap["PHYSICS"].help +=  "      - PEN\n";
+	optMap["PHYSICS"].help +=  "      - EMV: Designed for HEP productions. Production thresholds are enabled on secondary particles for all EM processes.\n";
+	optMap["PHYSICS"].help +=  "      - EMX: Designed for HEP productions. Alternative G4Generator2BS angular generator is used for the bremsstrahlung process.\n";
+	optMap["PHYSICS"].help +=  "      - EMY: Higher accuracy of electrons, hadrons and ion tracking without magnetic field\n";
+	optMap["PHYSICS"].help +=  "      - EMZ: Higher accuracy of electrons, hadrons and ion tracking. Use the most accurate standard and low-energy models.\n";
+	optMap["PHYSICS"].help +=  "      - LIV: Higher accuracy of electrons, hadrons and ion tracking without magnetic field. Livermore model on top of emstandard_opt4.\n";
+	optMap["PHYSICS"].help +=  "      - PEN: Higher accuracy of electrons, hadrons and ion tracking without magnetic field. Penelope model on top of emstandard_opt4.\n";
 	optMap["PHYSICS"].name = "Choice of Physics List";
 	optMap["PHYSICS"].type = 1;
 	optMap["PHYSICS"].ctgr = "physics";
